# pasta

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  404.html  Dockerfile  GLOSSARY.md  Justfile  README.md  index.html  install.html  mkdocs.yml  pyproject.toml  research.html  setup.py  sitemap.xml  typescript
.github/workflows/: pipeline.yml
docs/research/: intro.md  subshell.md  terminal.md  tokenizer.md
docs/stylesheets/: extra.css
docs/theme/: announcement.html
integrations/: completions.html  terminator.html  tmux.html
pasta/: __init__.py  __main__.py  actions.py  cmd.py  config.py  errors.py  multiplexor.py  pty.py  sessions.py  shell.py  subprocess.py  version.py
research/: analysis.html  fingerprint.html  intro.html  pty.html  subshell.html  terminal.html  tokenizer.html
tests/unit/: test_bare.py  test_pty.py
usage/: wrap.html
